--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1812,12 +1812,10 @@
             "pay_from_voucher": "أنت تدفع من الرصيد",
             "price": "السعر:",
             "payment_option_ideal": "الدفع عبر الإنترنت (iDEAL)",
-            "payment_option_ideal_aria_label": "الدفع عبر الإنترنت (iDEAL): انقر للحصول على مزيد من المعلومات",
             "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
-            "payment_option_qr_aria_label": "إظهار رمز الاستجابة السريعة لدى مقدم الخدمة: انقر للحصول على مزيد من المعلومات",
             "payment_option_reservation": "احجز عبر الإنترنت",
-            "payment_option_reservation_aria_label": "الحجز عبر الإنترنت: انقر للحصول على مزيد من المعلومات",
-            "payment_options": "خيارات الدفع"
+            "payment_options": "خيارات الدفع",
+            "payment_option_link": "اقرأ المزيد عن خيارات الدفع"
         },
         "low_amount": "ليس لديك رصيد ائتماني كافٍ.",
         "map": {
@@ -2540,6 +2538,12 @@
             "house_composition": "تكوين الأسرة",
             "living_arrangement": "الشكل الحي",
             "title": "الأسرة المعيشية"
+        },
+        "address": {
+            "cancel": "إلغاء",
+            "edit": "تحرير",
+            "save": "الحفظ",
+            "title": "تفاصيل العنوان"
         }
     },
     "reimbursements": {
