--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2242,12 +2242,10 @@
             "pay_from_voucher": "Вы платите из кредита:",
             "price": "Цена:",
             "payment_option_ideal": "Оплатить онлайн (iDEAL)",
-            "payment_option_ideal_aria_label": "Оплата онлайн (iDEAL): нажмите для получения дополнительной информации",
             "payment_option_qr": "Показать QR-код у провайдера",
-            "payment_option_qr_aria_label": "Показать QR-код у провайдера: нажмите для получения дополнительной информации",
             "payment_option_reservation": "Забронировать онлайн",
-            "payment_option_reservation_aria_label": "Онлайн-бронирование: нажмите для получения дополнительной информации",
-            "payment_options": "Варианты оплаты"
+            "payment_options": "Варианты оплаты",
+            "payment_option_link": "Подробнее о вариантах оплаты"
         },
         "low_amount": "У вас нет кредита с достаточным балансом.",
         "map": {
@@ -2390,6 +2388,12 @@
             "house_composition": "Состав семьи",
             "living_arrangement": "Живая форма",
             "title": "Домашнее хозяйство"
+        },
+        "address": {
+            "cancel": "Отмена",
+            "edit": "Редактировать",
+            "save": "Сохранить",
+            "title": "Адресная информация"
         }
     },
     "provider_sign_up": {
